[package]
name = "h2lang"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["h2lang contributors"]
description = "H2 Language - A Herbert Online Judge compatible programming language with multi-agent support"
license = "MIT"
repository = "https://github.com/ekusiadadus/h2lang"
documentation = "https://docs.rs/h2lang"
readme = "README.md"
keywords = ["compiler", "language", "robot", "wasm", "herbert"]
categories = ["compilers", "wasm", "parser-implementations"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
