[package]
name = "h2lang"
version = "0.5.0"
edition = "2021"
rust-version = "1.70"
authors = ["h2lang contributors"]
description = "H2 Language - A Herbert Online Judge compatible programming language with multi-agent support"
license = "MIT"
repository = "https://github.com/ekusiadadus/h2lang"
homepage = "https://github.com/ekusiadadus/h2lang"
documentation = "https://docs.rs/h2lang"
readme = "README.md"
keywords = ["compiler", "language", "robot", "wasm", "herbert"]
categories = ["compilers", "wasm", "parser-implementations"]
exclude = [
    ".github/",
    ".claude/",
    "target/",
    "pkg/",
    ".gitignore",
    "rust-toolchain.toml",
]

[lib]
crate-type = ["cdylib", "rlib"]

# docs.rs build configuration (2025 best practice)
[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
